--- a/resources/assets/sass/theme/v1/_general.scss
+++ b/resources/assets/sass/theme/v1/_general.scss
@@ -278,6 +278,9 @@ body {
 }
 
 .page-content-wrapper {
-    display : flex;
     flex    : 1 1 auto;
+    justify-content : flex-start; /* align items in Main Axis */
+    align-items     : stretch; /* align items in Cross Axis */
+    align-content   : stretch; /* Extra space in Cross Axis */
+    flex-direction  : row;
 }
